[gd_scene load_steps=14 format=2]

[ext_resource path="res://props/interactables/space_machine.png" type="Texture" id=1]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=2]
[ext_resource path="res://props/interactables/interactable.gd" type="Script" id=3]
[ext_resource path="res://props/interactables/space_machine.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 2 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( -18, -18 )
b = Vector2( -12, 27 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 18, -18 )
b = Vector2( 12, 27 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 12, 2.5 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 18, 1 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "close"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "open"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="space_machine" type="Node2D"]
script = ExtResource( 4 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6

[node name="interactable" type="Node2D" parent="."]
position = Vector2( 0, 64 )
script = ExtResource( 3 )
description = "Space Machine"
verb = "Activate"

[node name="entity_detector0" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -16 )
override_binlid = true

[node name="hitbox" type="CollisionShape2D" parent="entity_detector0"]
shape = SubResource( 1 )

[node name="entity_detector1" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -12 )
override_binlid = true

[node name="hitbox" type="CollisionShape2D" parent="entity_detector1"]
shape = SubResource( 1 )

[node name="entity_detector2" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 20 )
override_binlid = true

[node name="hitbox" type="CollisionShape2D" parent="entity_detector2"]
shape = SubResource( 2 )

[node name="collision" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="line0" type="CollisionShape2D" parent="collision"]
shape = SubResource( 3 )

[node name="line1" type="CollisionShape2D" parent="collision"]
shape = SubResource( 4 )

[node name="floor" type="CollisionShape2D" parent="collision"]
position = Vector2( 0, 28.5 )
shape = SubResource( 5 )

[node name="lid" type="CollisionShape2D" parent="collision"]
position = Vector2( 0, -20 )
shape = SubResource( 9 )

[node name="animator" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/close = SubResource( 7 )
anims/open = SubResource( 8 )

[node name="teleport_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="activated" from="interactable" to="." method="_on_interactable_activated"]
[connection signal="activated" from="entity_detector0" to="." method="_on_entity_detector0_activated"]
[connection signal="activated" from="entity_detector1" to="." method="_on_entity_detector1_activated"]
[connection signal="activated" from="entity_detector2" to="." method="_on_entity_detector2_activated"]
[connection signal="timeout" from="teleport_timer" to="." method="_on_teleport_timer_timeout"]
